Fix styling for mobile and center align on desktop

--- a/static/index.css
+++ b/static/index.css
@@ -348,7 +348,7 @@ table tr:nth-child(2n) {
   background-color: #f6f8fa;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1300px) {
   main {
     /** padding-top: 6em; **/
     width: unset;
